# dinobytes

./: .gitignore  README.md  pyproject.toml  setup.py
dinobytes/: __init__.py  dinobytes.py
tests/: test_dinobytes.py
